<resources>
    <string name="app_name">Practica3</string>
    <string name="button_send">Calcular</string>
    <string name="weight_name">Peso (Kg)</string>
    <string name="height_name">Altura (cm)</string>
    <string name="calc_button_name">Calcular</string>
    <string name="radioButton_male_name">Hombre</string>
    <string name="radioButton_female_name">Mujer</string>
    <string name="historic_button_name">Historial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>